--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,7 +49,7 @@ layout: default
 		<summary>See also</summary>
 		<ul>
 			{%- for link in page.see_also %}
-			{% include nested_list_item parent='' this=link %}
+			{% include nested_list_item this=link %}
 			{%- endfor %}
 		</ul>
 	</details>
