Increase inheritance of disambiguation
The credits/description/ToC/see also are all the same, so we're inheriting all that from the standard page, and I put the extra "disambig" in the standard page's <h1>. Neat!

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,12 @@
 layout: default
 ---
 <header class="d-section">
-	<h1 {%- if page.hide_title %} class="visually-hidden" {%- endif %}>{{ page.title }}</h1>
+	<h1 {%- if page.hide_title %} class="visually-hidden" {%- endif %}>
+		{{- page.title -}}
+		{%- if page.layout == "disambiguation" -%}
+			{{ " " }}(disambiguation)
+		{%- endif -%}
+	</h1>
 
 	{%- if page.credits %}
 	<div id="pagecred">{{ page.credits }}</div>
