--- a/_layouts/disambiguation.html
+++ b/_layouts/disambiguation.html
@@ -1,28 +1,6 @@
 ---
-layout: default
+layout: page
 ---
-<header class="d-section">
-	<h1 {%- if page.hide_title %} class="visually-hidden" {%- endif %}>{{ page.title }} (disambiguation)</h1>
-
-	{%- if page.credits %}
-	<div id="pagecred">{{ page.credits }}</div>
-	{%- endif %}
-
-	{%- if page.see_also %}
-	<details id="pageseealso" {%- if page.see_also.size <= 4 %} open {%- endif -%}>
-		<summary>See also</summary>
-		<ul>
-			{%- for link in page.see_also %}
-			<li><a href="{{ link.url | relative_url }}">{{ link.name }}</a>
-				{%- if link.for %}, for {{ link.for }}
-				{%- endif -%}
-			</li>
-			{%- endfor %}
-		</ul>
-	</details>
-	{%- endif %}
-</header>
-
 <section class="d-section">
 	<p>There is more than one page with the title "{{ page.title }}". You may be looking for one of the following:</p>
 
