--- a/css/global.css
+++ b/css/global.css
@@ -278,7 +278,10 @@ d-box[theme=battlemenu],
 	font-family: var(--font-tv);
 }
 /* #endregion */
-h1, h2, h3, h4, h5, h6 { font-weight: normal }
+h1, h2, h3, h4, h5, h6 {
+	font-weight: normal;
+	font-family: var(--font-condensed);
+}
 h2, h3, h4, h5, h6 {
 	margin-block: 0.7rem;
 	&:first-child { margin-block-start: 0 }
@@ -287,7 +290,6 @@ h2, h3, h4, h5, h6 {
 	body:not(.compact) :is(d-box, d-choices) + & { margin-block-start: var(--adjacent-spacing) }
 	body:not(.compact) &:has(+ d-box, + d-choices) { margin-block-end: var(--adjacent-spacing) }
 }
-h3, h4, h5, h6 { font-family: var(--font-condensed) }
 h4, h5, h6 { padding-inline-start: 0.8rem }
 h1 { font-size: 2.5em }
 h2 { font-size: 2.25em }
