Add dim mode Tenna color

--- a/css/global.css
+++ b/css/global.css
@@ -906,6 +906,7 @@ d-box, d-choices {
 					--sweet: #604800; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readability from #e9c040 */
 					--capn: #154e75; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readability from #6c6ab3 */
 					--kk: #1b551f;
+					--tenna: #7a223a;
 					--lanino: #7b3502; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readbility from above*/
 					--elnina: #174891; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readbility from above*/
 				}
