Add inverted fade theme

--- a/css/global.css
+++ b/css/global.css
@@ -959,13 +959,23 @@ d-box, d-choices {
 
 			box-shadow:
 				0 0
-				var(--border-width)	/* blur a lot */
-				calc(0.5 * var(--border-width))	/* spread out a bit */
+				calc(0.6 * var(--border-width))	/* blur */
+				calc(0.6 * var(--border-width))	/* spread */
 				var(--black);
 		}
 		&[theme=fade] {
 			width: calc(var(--basewidth) - 2em);
 			min-height: calc(var(--baseheight) - 2em);
+
+			&.invert {
+				background-color: var(--white);
+				color: var(--black);
+				box-shadow:
+					0 0
+					calc(0.6 * var(--border-width))	/* blur */
+					calc(0.6 * var(--border-width))	/* spread */
+					var(--white);
+			}
 		}
 		&[theme=prophecy] { min-height: unset }
 
