--- a/css/global.css
+++ b/css/global.css
@@ -47,6 +47,7 @@
 	/* Custom */
 	--gray: #aaa;
 	/* Character colors, picked off their Dark World sprites */
+	/* Light World */
 	--kris: #75fbed;
 	--susie: #f883d7;
 	--ralsei: #4dcc8e;
@@ -61,20 +62,26 @@
 	--mettaton: #fa0ef3;
 	--rudy: #d76551;
 	--carol: #00a2e8;
+	/* Chapter 1 */
 	--lancer: #78ade1; /* lightened for readability from #406080 */
 	--king: #5585bd; /* King uses the same sprite palette as Lancer so this one's actually taken from Lancer's bucket LMAO */
 	--rouxls: #637de3; /* CUSTOM-PICKED, NOT FROM SPRITE; lightened for readability from #0f0062 */
+	--seam: #8482b5;
 	--jevil: #8a95c8; /* mixed for readability from #6d6dc0 and #a6bdd0 */
+	--jigsawjoe: #46c8ff;
+	/* Chapter 2 */
 	--queen: #00a2e8;
 	--sweet: #e9c040;
 	--capn: #4092cc;
 	--kk: #5bc762;
 	--friend-pink: #ffaec9;
 	--friend-yellow: #fff200;
+	/* Chapter 3 */
 	--tenna: #da1f52;
 	--lanino: #fcce6c;
 	--elnina: #9bc3fe;
 	--eram: #f26522;
+	/* Chapter 4 */
 	--gerson: #65aa26;
 
 	--font-base: "DeltaFont", "Courier New", Courier, monospace;
@@ -112,6 +119,7 @@ body.dim {
 	--berdly: #558ed5; /* from Light World sprite */
 	--toriel: #5e5492;
 	--jevil: #6d6dc0;
+	--jigsawjoe: #0096d7;
 	--sweet: #bb941a; /* CUSTOM-PICKED, NOT FROM SPRITE */
 	--lanino: #b89d64; /* CUSTOM-PICKED, NOT FROM SPRITE */
 	--elnina: #7497ca; /* CUSTOM-PICKED, NOT FROM SPRITE */
@@ -222,7 +230,9 @@ d-box[theme=battlemenu],
 .lancer { color: var(--lancer) }
 .king { color: var(--king) }
 .rouxls { color: var(--rouxls) }
+.seam { color: var(--seam) }
 .jevil { color: var(--jevil) }
+.jigsawjoe { color: var(--jigsawjoe) }
 /* Chapter 2 */
 .queen { color: var(--queen) }
 .sweet { color: var(--sweet) }
@@ -350,7 +360,7 @@ hr {
 		overflow: visible;
 		width: 100%;
 		height: 0.2em;
-		background: linear-gradient(to right, var(--white) calc(50% - 3em), transparent  calc(50% - 2em) calc(50% + 2em), var(--white) calc(50% + 3em));
+		background: linear-gradient(to right, var(--white) calc(50% - 3em), transparent calc(50% - 2em) calc(50% + 2em), var(--white) calc(50% + 3em));
 
 		&::before {
 			content: "";
@@ -898,6 +908,7 @@ d-box, d-choices {
 				--lancer: #406080;
 				--queen: #1263bc;
 				--rouxls: #3620b0; /* CUSTOM-PICKED, NOT FROM SPRITE; lightened for readability from #0f0062 */
+				--jigsawjoe: #283f64;
 				--jevil: #3c3c97; /* darkened for readbility from #6d6dc0 */
 				--sweet: #b69325; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readability from #e9c040 */
 				--capn: #615eb9; /* CUSTOM-PICKED, NOT FROM SPRITE; darkened for readability from #6c6ab3 */
