--- a/css/global.css
+++ b/css/global.css
@@ -784,7 +784,7 @@ body {
 	&:first-child, .selection-label + & { margin-block-start: 0 }
 	&:last-child { margin-block-end: 0 }
 
-	a:not(:hover, :focus) { color: inherit }
+	a:not(.kris, .susie, .ralsei, .noelle, :hover, :focus) { color: inherit }
 }
 /* #endregion */
 
